Updated JS pattern

--- a/README
+++ b/README
@@ -10,7 +10,7 @@
  *
  * Tech:        AJAX, CSS, CSS3, HTML, JavaScript, JSON, jQuery, 
  *              MySQL, OpenTok API, PHP
- * Last Update: Sept 17th, 2011
+ * Last Update: Sept 23rd, 2011
  ***********************************************************************/
  
  NOTE: *** 3rd PARTY LIBRARIES HAVE BEEN OMITTED FROM THE PUBLIC REPO ***
